Bug 970141 Use CSS pixels rather than device pixels for delta values of WheelEvent r=smaug