dom/events/WheelEvent.cpp
@@ -17,9 +17,17 @@ WheelEvent::WheelEvent(EventTarget* aOwner,
   : MouseEvent(aOwner, aPresContext,
                aWheelEvent ? aWheelEvent :
                              new WidgetWheelEvent(false, 0, nullptr))
+  , mAppUnitsPerDevPixel(0)
 {
   if (aWheelEvent) {
     mEventIsInternal = false;
+    // If the delta mode is pixel, the WidgetWheelEvent's delta values are in
+    // device pixels.  However, JS contents need the delta values in CSS pixels.
+    // We should store the value of mAppUnitsPerDevPixel here because
+    // it might be changed by changing zoom or something.
+    if (aWheelEvent->deltaMode == nsIDOMWheelEvent::DOM_DELTA_PIXEL) {
+      mAppUnitsPerDevPixel = aPresContext->AppUnitsPerDevPixel();
+    }
   } else {
     mEventIsInternal = true;
     mEvent->time = PR_Now();
@@ -71,7 +79,11 @@ WheelEvent::InitWheelEvent(const nsAString& aType,
 double
 WheelEvent::DeltaX()
 {
-  return mEvent->AsWheelEvent()->deltaX;
+  if (!mAppUnitsPerDevPixel) {
+    return mEvent->AsWheelEvent()->deltaX;
+  }
+  return mEvent->AsWheelEvent()->deltaX *
+    mAppUnitsPerDevPixel / nsPresContext::AppUnitsPerCSSPixel();
 }
 
 NS_IMETHODIMP
@@ -86,7 +98,11 @@ WheelEvent::GetDeltaX(double* aDeltaX)
 double
 WheelEvent::DeltaY()
 {
-  return mEvent->AsWheelEvent()->deltaY;
+  if (!mAppUnitsPerDevPixel) {
+    return mEvent->AsWheelEvent()->deltaY;
+  }
+  return mEvent->AsWheelEvent()->deltaY *
+    mAppUnitsPerDevPixel / nsPresContext::AppUnitsPerCSSPixel();
 }
 
 NS_IMETHODIMP
@@ -101,7 +117,11 @@ WheelEvent::GetDeltaY(double* aDeltaY)
 double
 WheelEvent::DeltaZ()
 {
-  return mEvent->AsWheelEvent()->deltaZ;
+  if (!mAppUnitsPerDevPixel) {
+    return mEvent->AsWheelEvent()->deltaZ;
+  }
+  return mEvent->AsWheelEvent()->deltaZ *
+    mAppUnitsPerDevPixel / nsPresContext::AppUnitsPerCSSPixel();
 }
 
 NS_IMETHODIMP
